cert-manager/nginx-deployment/nginx-middelware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirecttohttps
  namespace: nginx
spec:
  redirectScheme:
    permanent: false
    scheme: https
